public class Suma extends OperaciónBásica{
	public Suma(double a, double b) {

	}
}